--- a/src/components/Countdown.css
+++ b/src/components/Countdown.css
@@ -6,9 +6,9 @@
 .Countdown-col {
     display: block;
     text-align: center;
-    padding: 0 10px;
+    padding: 0px 10px;
 }
 
-.Countdown-col h1 {
+.Countdown-col div {
     font-size: 35px;
 }
