--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ body {
   height: 100%;
   background: var(--color-black);
   font-family: "IBM Plex Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
