--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,24 @@ a:visited {
   flex-direction: column;
 }
 
+.loading-card {
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: blinker 1.5s linear infinite;
+  opacity: 0;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 1;
+  }
+}
+
 .card {
   width: 90%;
   height: 80%;
@@ -46,7 +64,38 @@ a:visited {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+
+  animation: fadeIn ease 3s;
+  -webkit-animation: fadeIn ease 3s;
+  -moz-animation: fadeIn ease 3s;
+  -o-animation: fadeIn ease 3s;
+  -ms-animation: fadeIn ease 3s;
 }
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+
+  @-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+
+  @-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+
+  @-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+
+  @-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
 
 @media screen and (max-width: 512px) {
   .card {
