--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --color-black: #000;
   --color-medieval-blue: linear-gradient(180deg, #9ACFFF 0%, #CBE6FF 33.33%), #CBE6FF;
   --color-nighttime: linear-gradient(180deg, #322336 0%, #64406D 32.29%), #5B4065;
+  --color-dark-purple: #291125;
   --gradient-lighter: rgba(255, 163, 125, 0.65);
   --gradient-darker: rgba(255, 100, 124, 0.55);
 }
@@ -27,13 +28,25 @@
   fill: var(--color-red);
 }
 
-html,
-body {
-  height: 100%;
-  background: var(--color-black);
-  font-family: "IBM Plex Sans", sans-serif;
+/* TODO: change color for light theme */
+html {
   margin: 0;
   padding: 0;
+  height: 100%;
+
+  /* jheeeeez this was an effort, dont come for me css gods */
+  background: var(--color-black);
+  background-image: url(./assets/background/night/dark-purple.svg);
+  background-repeat: repeat-y;
+  background-size: 90% auto;
+  background-position: center;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 a {
@@ -50,9 +63,10 @@ a.underlined:hover {
 }
 
 #root {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  background: var(--color-black);
 }
 
 .loading-card {
@@ -98,12 +112,11 @@ a.underlined:hover {
 
 .card {
   width: 90%;
-  height: 80%;
+  height: 100%;
+  /* height: 80%; */
   max-width: 1800px;
-  margin: auto;
-  min-height: 512px;
-  /* box-shadow: 0px 35px 70px 0px var(--gradient-lighter), 0px 30px 40px -10px var(--gradient-darker); */
-  border-radius: 10px;
+  margin: 0px auto;
+  padding-bottom: 20px;
   display: flex;
   flex-direction: column;
 
@@ -148,6 +161,10 @@ a.underlined:hover {
     background: url(./assets/icons/background-mobile.svg);
     background-size: cover;
     background-position: right bottom;
+  }
+
+  html {
+    background-size: auto auto;
   }
 }
 
