--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,23 @@
   --gradient-darker: rgba(255, 100, 124, 0.55);
 }
 
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .black {
   color: var(--color-black);
   fill: var(--color-black);
