--- a/src/Animations.css
+++ b/src/Animations.css
@@ -49,13 +49,14 @@
   background-image:
     url(./assets/background/night/grass-foreground.svg),
     url(./assets/background/night/castle.svg),
-    url(./assets/background/night/grass-background.svg);
+    url(./assets/background/night/grass-background.svg),
+    url(./assets/background/night/moon.svg);
   background-size: auto 100%;
   background-position: left bottom;
 }
 
+/* TODO: remove */
 .moon {
-  background-image: url(./assets/background/night/moon.svg);
   background-size: auto 100%;
   background-position: left bottom;
 }
@@ -74,6 +75,7 @@
 }
 
 @media screen and (max-width: 512px) {
+  /* TODO: add moon? */
   .castle {
     background: url(./assets/background/night/mobile.svg);
     background-size: auto 100%;
