--- a/src/Animations.css
+++ b/src/Animations.css
@@ -77,8 +77,9 @@
 @media screen and (max-width: 512px) {
   /* TODO: add moon? */
   .castle {
+    margin: 0px auto;
     background: url(./assets/background/night/mobile.svg);
-    background-size: auto 100%;
+    background-size: cover;
     background-position: right bottom;
   }
 
