trying a different background strategy yet again. literally no idea what's going. if ur reading this, pls go easy on me, i can only see these changes specifically in my mobile browser idk why.

--- a/src/Animations.css
+++ b/src/Animations.css
@@ -76,12 +76,12 @@
 
 @media screen and (max-width: 512px) {
   /* TODO: add moon? */
-  /* .castle {
+  .castle {
     margin: 0px auto;
     background: url(./assets/background/night/mobile.svg);
     background-size: auto 100%;
     background-position: right bottom;
-  } */
+  }
 
   .stars, .twinkling, .castle {
     width: 100%;
