--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,10 @@ a.underlined:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: var(--color-black);
+}
+
+.loading-logo {
   animation: blinker 1.5s linear infinite;
   opacity: 0;
 }
