--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,10 @@ a.underlined:hover {
     background-image: none,
   }
 
+  #root {
+    background: var(--color-dark-purple);
+  }
+
   body {
     background: var(--color-dark-purple);
   }
