--- a/src/App.css
+++ b/src/App.css
@@ -207,8 +207,7 @@ a:visited {
   .bg-signUp {
     background: url(./assets/background/night/mobile.svg);
     background-position: right bottom;
-    /* background-size: 100% 100%; */
-    background-size: cover;
+    background-size: auto 100%;
   }
 
   .purple-bg-extend {
