--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
   --color-white: #FFF;
   --color-beige: #F4E4BA;
   --color-black: #000;
+  --color-light-green: #85D6B3;
+  --color-light-grey: #F4F4F4;
   --color-medieval-blue: linear-gradient(180deg, #9ACFFF 0%, #CBE6FF 33.33%), #CBE6FF;
   --color-nighttime: linear-gradient(180deg, #322336 0%, #64406D 32.29%), #5B4065;
   --color-dark-purple: #291125;
@@ -51,10 +53,30 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
+}
 
+.purple-bg-extend {
   /* jheeeeez this was an effort, dont come for me css gods */
   background: var(--color-black);
-  background-image: url(./assets/background/night/dark-purple.svg);
+  background-image: url(./assets/background/solid/dark-purple.svg);
+  background-repeat: repeat-y;
+  background-size: 90% auto;
+  background-position: center;
+}
+
+.green-bg-extend {
+  /* jheeeeez this was an effort, dont come for me css gods */
+  background: var(--color-black);
+  background-image: url(./assets/background/solid/light-green.svg);
+  background-repeat: repeat-y;
+  background-size: 90% auto;
+  background-position: center;
+}
+
+.grey-bg-extend {
+  /* jheeeeez this was an effort, dont come for me css gods */
+  background: var(--color-black);
+  background-image: url(./assets/background/solid/light-grey.svg);
   background-repeat: repeat-y;
   background-size: 90% auto;
   background-position: center;
@@ -185,12 +207,24 @@ a:visited {
   .bg-signUp {
     background: url(./assets/background/night/mobile.svg);
     background-position: right bottom;
-    background-size: 100% 100%;
+    background-size: auto 100%;
   }
 
-  html {
+  .purple-bg-extend {
     background-size: 100% 100%;
     background: var(--color-dark-purple);
+    background-image: none,
+  }
+
+  .green-bg-extend {
+    background-size: 100% 100%;
+    background: var(--color-light-green);
+    background-image: none,
+  }
+
+  .grey-bg-extend {
+    background-size: 100% 100%;
+    background: var(--color-light-gray);
     background-image: none,
   }
 
@@ -206,7 +240,7 @@ a:visited {
 .content {
   font-family: "Aclonica";
   flex: 1 1 auto;
-  min-height: 256px;
+  /* min-height: 256px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
