--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,7 @@ a:visited {
   .bg-signUp {
     background: url(./assets/background/night/mobile.svg);
     background-position: right bottom;
-    background-size: auto 100%;
+    background-size: cover;
   }
 
   .purple-bg-extend {
